--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "classnames": "^2.5.1",
     "focus-trap-react": "^10.2.3",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
