--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.4",
+    "@mui/material": "^5.15.4",
     "classnames": "^2.5.1",
     "focus-trap-react": "^10.2.3",
     "localforage": "^1.10.0",
