--- a/package.json
+++ b/package.json
@@ -14,8 +14,12 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.4",
     "@mui/material": "^5.15.4",
+    "@nextui-org/react": "^2.2.9",
+    "@tanstack/react-query": "^5.17.15",
+    "axios": "^1.6.5",
     "classnames": "^2.5.1",
     "focus-trap-react": "^10.2.3",
+    "framer-motion": "^10.18.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
@@ -28,7 +32,8 @@
     "react-rating": "^2.0.5",
     "react-router-dom": "^6.21.2",
     "sort-by": "^1.2.0",
-    "styled-components": "^6.1.8"
+    "styled-components": "^6.1.8",
+    "swiper": "^11.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
