--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@tanstack/react-query": "^5.17.15",
     "axios": "^1.6.5",
     "classnames": "^2.5.1",
+    "firebase": "^10.7.2",
     "focus-trap-react": "^10.2.3",
     "framer-motion": "^10.18.0",
     "localforage": "^1.10.0",
