--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "react-icons": "^5.0.1",
     "react-rating": "^2.0.5",
     "react-router-dom": "^6.21.2",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
     "sort-by": "^1.2.0",
     "styled-components": "^6.1.8",
     "swiper": "^11.0.5"
