--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-fast-marquee": "^1.6.2",
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^2.0.4",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-rating": "^2.0.5",
     "react-router-dom": "^6.21.2",
