--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "focus-trap-react": "^10.2.3",
     "framer-motion": "^10.18.0",
     "localforage": "^1.10.0",
+    "lottie-react": "^2.4.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-countup": "^6.5.0",
