--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "^5.15.4",
-    "@mui/material": "^5.15.4",
+    "@fontsource/roboto": "^5.0.8",
+    "@mui/icons-material": "^5.15.6",
+    "@mui/material": "^5.15.6",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.13",
     "@nextui-org/react": "^2.2.9",
     "@tanstack/react-query": "^5.17.15",
     "axios": "^1.6.5",
@@ -30,8 +32,10 @@
     "react-fast-marquee": "^1.6.2",
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^2.0.4",
+    "react-hook-form": "^7.49.3",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
+    "react-messenger-customer-chat": "^0.8.0",
     "react-rating": "^2.0.5",
     "react-router-dom": "^6.21.2",
     "react-slick": "^0.29.0",
