added dashboard edited version

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "slick-carousel": "^1.8.1",
     "sort-by": "^1.2.0",
     "styled-components": "^6.1.8",
+    "sweetalert2": "^11.10.4",
     "swiper": "^11.0.5"
   },
   "devDependencies": {
