--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.12.1",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.8",
@@ -19,7 +20,7 @@
     "@mui/styled-engine-sc": "^6.0.0-alpha.13",
     "@nextui-org/react": "^2.2.9",
     "@tanstack/react-query": "^5.17.15",
-    "axios": "^1.6.5",
+    "axios": "^1.6.7",
     "classnames": "^2.5.1",
     "firebase": "^10.7.2",
     "focus-trap-react": "^10.2.3",
@@ -28,6 +29,7 @@
     "lottie-react": "^2.4.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
+    "react-calendly": "^4.3.0",
     "react-countup": "^6.5.0",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.6.2",
@@ -43,6 +45,7 @@
     "slick-carousel": "^1.8.1",
     "sort-by": "^1.2.0",
     "styled-components": "^6.1.8",
+    "sweetalert2": "^11.10.4",
     "swiper": "^11.0.5"
   },
   "devDependencies": {
