--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "lottie-react": "^2.4.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-calendar": "^4.8.0",
     "react-calendly": "^4.3.0",
     "react-countup": "^6.5.0",
