--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "localforage": "^1.10.0",
     "lottie-react": "^2.4.0",
     "match-sorter": "^6.3.1",
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.5.44",
     "react": "^18.2.0",
     "react-calendar": "^4.8.0",
     "react-calendly": "^4.3.0",
