--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@canvasjs/react-charts": "^1.0.0",
     "@emailjs/browser": "^3.12.1",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
@@ -21,6 +22,7 @@
     "@tanstack/react-query": "^5.17.15",
     "axios": "^1.6.5",
     "classnames": "^2.5.1",
+    "d3": "^7.8.5",
     "firebase": "^10.7.2",
     "focus-trap-react": "^10.2.3",
     "framer-motion": "^10.18.0",
