--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "axios": "^1.6.5",
     "classnames": "^2.5.1",
     "d3": "^7.8.5",
+    "d3node-barchart": "^0.1.1",
     "firebase": "^10.7.2",
     "focus-trap-react": "^10.2.3",
     "framer-motion": "^10.18.0",
