--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@mui/material": "^5.15.6",
     "@mui/styled-engine-sc": "^6.0.0-alpha.13",
     "@tanstack/react-query": "^5.17.15",
+    "@types/jest": "^29.5.12",
+    "@types/node": "^20.11.19",
     "@uploadcare/blocks": "^0.32.2",
     "@zegocloud/zego-uikit-prebuilt": "^1.10.2",
     "apexcharts": "^3.45.2",
@@ -53,18 +55,19 @@
     "react-rating": "^2.0.5",
     "react-router-dom": "^6.21.2",
     "react-slick": "^0.29.0",
-    "recharts": "^2.11.0",
+    "recharts": "^2.12.0",
     "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.7.4",
     "sort-by": "^1.2.0",
     "styled-components": "^6.1.8",
     "sweetalert2": "^11.10.4",
     "swiper": "^11.0.5",
+    "typescript": "^5.3.3",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "@types/react": "^18.2.43",
-    "@types/react-dom": "^18.2.17",
+    "@types/react": "^18.2.56",
+    "@types/react-dom": "^18.2.19",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.17",
     "daisyui": "^4.6.0",
