--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "@zegocloud/zego-uikit-prebuilt": "^1.10.2",
     "apexcharts": "^3.45.2",
     "axios": "^1.6.5",
+    "chart.js": "^4.4.1",
     "classnames": "^2.5.1",
     "d3": "^7.8.5",
     "d3node-barchart": "^0.1.1",
+    "faker": "^6.6.6",
     "firebase": "^10.8.0",
     "focus-trap-react": "^10.2.3",
     "framer-motion": "^10.18.0",
@@ -41,6 +43,7 @@
     "react-apexcharts": "^1.4.1",
     "react-calendar": "^4.8.0",
     "react-calendly": "^4.3.0",
+    "react-chartjs-2": "^5.2.0",
     "react-countup": "^6.5.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
