--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "axios": "^1.6.5",
     "chart.js": "^4.4.1",
     "classnames": "^2.5.1",
+    "cors": "^2.8.5",
     "d3": "^7.8.5",
     "d3node-barchart": "^0.1.1",
     "faker": "^6.6.6",
