--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-router-dom": "^6.22.1",
     "react-slick": "^0.29.0",
     "react-tabs": "^6.0.2",
+    "react-type-animation": "^3.2.0",
     "recharts": "^2.12.0",
     "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.7.4",
